Unify weapon right-click via Skript and /skeboss cast
- Add /skeboss cast <laser|chain> for Skript-driven skill casting
- Add combined artificial-arm weapon (normal click=laser, sneak+click=chain)
- Set weapons.plugin-right-click: false so Skript handles clicks
- Merge boss RPG stats and weapon click into single skeboss.sk

Co-authored-by: 213asdaw <213asdaw@users.noreply.github.com>